--- a/package.json
+++ b/package.json
@@ -3,7 +3,9 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start" : "nodemon app.js",
+    "start-server": "app.js"
   },
   "repository": {
     "type": "git",
@@ -15,5 +17,14 @@
     "url": "https://github.com/ankitchoubey30/banking-app/issues"
   },
   "homepage": "https://github.com/ankitchoubey30/banking-app#readme",
-  "description": ""
+  "description": "",
+  "dependencies": {
+    "body-parser": "^1.19.0",
+    "ejs": "^3.1.5",
+    "express": "^4.17.1",
+    "mysql": "^2.18.1",
+    "mysql2": "^2.2.5",
+    "nodemon": "^2.0.4",
+    "sequelize": "^6.3.5"
+  }
 }
